<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fr.esilv.s8.mobileappdev.final_project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />



    <fragment
        android:id="@+id/nav_slideshow"
        android:name="fr.esilv.s8.mobileappdev.final_project.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_share"
        android:name="fr.esilv.s8.mobileappdev.final_project.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="fr.esilv.s8.mobileappdev.final_project.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="fr.esilv.s8.mobileappdev.final_project.ui.weather.WeatherFragment"
        android:label="@string/weather"
        tools:layout="@layout/weather_fragment" />
</navigation>